--- a/frontend/src/assets/scss/_themes.scss
+++ b/frontend/src/assets/scss/_themes.scss
@@ -3,7 +3,7 @@
 
 $mat-theme-ignore-duplication-warnings: true;
 
-$mat-light-primary: mat-palette($mat-light-blue, 300);
+$mat-light-primary: mat-palette($mat-indigo, A700);
 $mat-light-accent:  mat-palette($mat-purple, A700);
 $mat-light-warn:    mat-palette($mat-pink, A200);
 
